force-app/main/default/objects/Dummy12__c/Dummy12__c.object-meta.xml
<CustomObject>
    <label>Dummy12</label>
    <nameField>
        <label>Dummy12 Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Dummy12</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>