force-app/main/default/objects/Dummy12__c/fields/FooBar021__c.field-meta.xml
<CustomField>
    <fullName>FooBar021__c</fullName>
    <label>FooBar021</label>
    <length>255</length>
    <type>Text</type>
</CustomField>