force-app/main/default/objects/Dummy12__c/fields/FooBar040__c.field-meta.xml
<CustomField>
    <fullName>FooBar040__c</fullName>
    <label>FooBar040</label>
    <length>255</length>
    <type>Text</type>
</CustomField>