force-app/main/default/objects/Dummy12__c/fields/FooBar087__c.field-meta.xml
<CustomField>
    <fullName>FooBar087__c</fullName>
    <label>FooBar087</label>
    <length>255</length>
    <type>Text</type>
</CustomField>